<resources>
    <string name="app_name">MedicationAdherence</string>
    <string name="title_activity_main">Med Tracker</string>

    <string name="menu_home">Home</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_medication">Medications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_doctor">Doctors</string>
    <string name="menu_calendar">Calendar</string>
    <string name="title_activity_daily_medication_list">Daily Medications</string>

    <string name="data_delete_title">Delete Database</string>
    <string name="data_delete_summary">Delete all medicines, schedules, and adherence</string>

    <string name="sort_az_asc">"Alphabetical Asc."</string>
    <string name="sort_az_desc">"Alphabetical Desc."</string>
    <string name="data_dialog_warning">"Warning: this will delete all stored data, do you wish to continue?"</string>
    <string name="doctor_update">A doctor with that name already exists.  Do you wish to update the existing entry?</string>

    <string name="summary_no_data">No data</string>

    <string name="NotificationTitle">"MedTracker"</string>
    <string name="NotificationText">"It's time to take your meds!"</string>
    <string name="next">Next</string>
    <string name="daily_switch">Daily</string>
    <string name="schedule_days_error">*at least one day req.</string>
    <string name="sunday_abbv">Su</string>
    <string name="monday_abbv">M</string>
    <string name="tuesday_abbv">T</string>
    <string name="wednesday_abbv">W</string>
    <string name="thursday_abbv">Th</string>
    <string name="friday_abbv">F</string>
    <string name="saturday_abbv">S</string>
    <string name="add_time_button">Add time</string>
    <string name="schedule_time_error">*at least one time req.</string>
    <string name="today">Today</string>
    <string name="prescribing_doctor_info">Prescribing Doctor Info:</string>
    <string name="doctor_name">Doctor name</string>
    <string name="doctor_name_error">*doctor name required</string>
    <string name="practice_name">Practice name</string>
    <string name="practice_address">Practice address</string>
    <string name="phone_num">Phone #</string>
    <string name="schedule_after">Schedule after creation</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="medication_name">Medication name</string>
    <string name="medication_name_error">*medication name required</string>
    <string name="active">Active</string>
    <string name="set_start_date">Set start date</string>
    <string name="set_end_date">Set end date</string>
    <string name="end_date_error">invalid end date</string>
    <string name="dosage_per_pill">Dosage per pill</string>
    <string name="pill_dosage_error">*invalid pill dosage</string>
    <string name="start_pill_num"># of pills at start</string>
    <string name="container_cost">Container cost</string>
    <string name="acceptable_delay">Acceptable delay:</string>
    <string name="as_needed">As needed</string>
    <string name="instructions">Instructions</string>
    <string name="missed">Missed</string>
    <string name="taken">Taken</string>
    <string name="next_day">view next day</string>
    <string name="previous_day">view previous day</string>
    <string name="back_cancel">go back or cancel</string>
    <string name="next_finish">go to next or finish</string>
    <string name="decrease_dose_count">decrease number of doses by .5</string>
    <string name="increase_dose_count">increase number of doses by .5</string>
    <string name="number_of_doses">number of doses</string>
    <string name="summary_previous">view summary for previous time span</string>
    <string name="summary_next">view summary for next time span</string>
    <string name="summary_expand">show summary for individual medications</string>
    <string name="pill_image">pill image</string>
    <string name="image_of_medication">image of medication</string>
    <string name="expand_card">expand card for more information</string>
    <string name="remove_time">remove time</string>
</resources>
