<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.medications.wizard.EditScheduleCardFragment">

    <TextView
        android:id="@+id/scheduleMedName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/scheduleDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/daily_switch"
        app:layout_constraintStart_toStartOf="@+id/scheduleMedName"
        app:layout_constraintTop_toBottomOf="@+id/scheduleMedName" />

    <TextView
        android:id="@+id/timeCardDayErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_days_error"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scheduleDaily"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toEndOf="@+id/scheduleDaily" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/scheduleMedName"
        app:layout_constraintStart_toStartOf="@+id/scheduleMedName"
        app:layout_constraintTop_toBottomOf="@+id/scheduleDaily">

        <CheckBox
            android:id="@+id/scheduleSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday_abbv" />

        <CheckBox
            android:id="@+id/scheduleMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday_abbv" />

        <CheckBox
            android:id="@+id/scheduleTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday_abbv" />

        <CheckBox
            android:id="@+id/scheduleWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday_abbv" />

        <CheckBox
            android:id="@+id/scheduleThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday_abbv" />

        <CheckBox
            android:id="@+id/scheduleFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday_abbv" />

        <CheckBox
            android:id="@+id/scheduleSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday_abbv" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scheduleTimes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scheduleSetTime"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/scheduleMedName"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/scheduleSetTime"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/add_time_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scheduleTimes" />

    <TextView
        android:id="@+id/timeCardTimeErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/schedule_time_error"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/scheduleTimes"
        app:layout_constraintStart_toEndOf="@+id/scheduleSetTime"
        app:layout_constraintTop_toBottomOf="@+id/scheduleTimes" />

</androidx.constraintlayout.widget.ConstraintLayout>