<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/scheduleCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/scheduleCardSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/sunday_abbv" />

                <CheckBox
                    android:id="@+id/scheduleCardMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/monday_abbv" />

                <CheckBox
                    android:id="@+id/scheduleCardTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/tuesday_abbv" />

                <CheckBox
                    android:id="@+id/scheduleCardWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/wednesday_abbv" />

                <CheckBox
                    android:id="@+id/scheduleCardThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/thursday_abbv" />

                <CheckBox
                    android:id="@+id/scheduleCardFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/friday_abbv" />

                <CheckBox
                    android:id="@+id/scheduleCardSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="@string/saturday_abbv" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>