<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.medications.wizard.WizardMedicineDetailFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/wizardMedName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/wizardMedNameRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medication_name_error"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/wizardActive"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Switch
            android:id="@+id/wizardActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/active"
            android:textAppearance="@style/Theme.AppCompat.DayNight"
            android:textColor="?attr/colorControlNormal"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Button
            android:id="@+id/wizardSetStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/set_start_date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/wizardActive" />

        <TextView
            android:id="@+id/wizardStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="1dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/wizardSetStartDate"
            app:layout_constraintStart_toEndOf="@+id/wizardSetStartDate"
            app:layout_constraintTop_toTopOf="@+id/wizardSetStartDate" />

        <Button
            android:id="@+id/wizardSetEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_end_date"
            app:layout_constraintEnd_toEndOf="@+id/wizardSetStartDate"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/wizardSetStartDate" />

        <TextView
            android:id="@+id/wizardEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="1dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/wizardSetEndDate"
            app:layout_constraintStart_toEndOf="@+id/wizardSetEndDate"
            app:layout_constraintTop_toTopOf="@+id/wizardSetEndDate" />

        <TextView
            android:id="@+id/wizardEndDateBefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="1dp"
            android:text="@string/end_date_error"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/wizardSetEndDate"
            app:layout_constraintStart_toEndOf="@+id/wizardSetEndDate"
            app:layout_constraintTop_toTopOf="@+id/wizardSetEndDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/wizardSetStartDate"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/wizardSetEndDate">

            <AutoCompleteTextView
                android:id="@+id/wizardPerPillDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dosage_per_pill"
                android:inputType="number"
                android:importantForAutofill="yes"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/wizardDosageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="11dp"
            android:entries="@array/medDosageUnits"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5" />

        <TextView
            android:id="@+id/wizardPillDoseRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/pill_dosage_error"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputOnHand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/wizardDosageSpinner"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wizardOnHand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_pill_num"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/wizardDosageSpinner"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputOnHand">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wizardCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/container_cost"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptable_delay"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/wizardActive"
            app:layout_constraintTop_toBottomOf="@+id/wizardPillDoseRequired" />

        <Spinner
            android:id="@+id/medicineLate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/lateTimes"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/wizardAsNeeded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_needed"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputCost" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/wizardAsNeeded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wizardInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instructions" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>