<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ImageButton
        android:id="@+id/doseCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/doseCountText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/doseCountText"
        app:srcCompat="@drawable/ic_minus"
        android:contentDescription="@string/decrease_dose_count" />

    <EditText
        android:id="@+id/doseCountText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doseCountSize"
        app:layout_constraintStart_toEndOf="@+id/doseCountDown"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        android:hint="@string/number_of_doses"/>

    <TextView
        android:id="@+id/doseCountSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/doseCountText"
        app:layout_constraintEnd_toStartOf="@+id/doseCountUp"
        app:layout_constraintTop_toTopOf="@+id/doseCountText" />

    <ImageButton
        android:id="@+id/doseCountUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:tint="?attr/colorControlNormal"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="@+id/doseCountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/doseCountText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_add_24px"
        android:contentDescription="@string/increase_dose_count" />
</androidx.constraintlayout.widget.ConstraintLayout>